@@ -3,6 +3,7 @@
 
  - Trade from your groups
  - View trade history
+ - Trade notes
 
 0.9.83
 ======
